<resources>
    <string name="app_name">Flex</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
<!--    <string name="local_video">Local_Video</string>-->
    <string name="local_music">Local Music</string>
    <string name="local_videoo">Local Video</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment">Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="video_fragment">Video Fragment</string>

    <string name="history_fragment">History Fragment</string>
    <string name="explore_fragment">Explore Fragment</string>
    <string name="music_fragmentt">Music Fragment</string>
    <string name="recent">Recent</string>
    <string name="your_video">Your Video</string>
    <string name="watch_later">Watch Later</string>
    <string name="like_videos">Like Videos</string>
    <string name="playlist">PlayList</string>
    <string name="new_playlist">New Playlist</string>
    <string name="username">UserName</string>
    <string name="settings">Settings</string>
    <string name="you_need_to_sign_in">You Need To Sign in</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="main_logo">Main Logo</string>
<!--    <string name="default_web_client_id" />-->
    <string name="email">Email</string>
    <string name="help">Help</string>
    <string name="local_video">Local Video</string>

</resources>