<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/baseline_explore_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/local_Video"
        android:title="@string/local_video"
        android:icon="@drawable/baseline_video_library_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/local_music"
        android:title="@string/local_music"
        android:icon="@drawable/baseline_library_music_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/baseline_history_24"
        app:showAsAction="ifRoom"/>


</menu>