<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:title="Account"/>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_account_circle_24"
            android:id="@+id/user_profile_image"
            app:civ_border_width="0.5dp"
            app:civ_border_color="@color/white"/>

        <TextView
            android:id="@+id/user_channel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/user_profile_image"
            android:textColor="#212121"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorSecondaryText"
            android:layout_below="@id/user_channel_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/user_profile_image"
            />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:backgroundTint="@color/black"
        android:layout_below="@id/relativeLayout"

        android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/center"
            android:theme="@style/Widget.Design.BottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/txt_setting"
                android:background="@drawable/ripple_effect"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/black"

                android:textSize="18sp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/baseline_settings"/>
            <TextView
                android:id="@+id/txt_help"
                android:background="@drawable/ripple_effect"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/black"

                android:textSize="18sp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/baseline_feedback_24"/>


        </LinearLayout>



    
    
        

</RelativeLayout>